--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
-APP_PORT = 3002
-DB_USER = devroot
-DB_PASSWORD = devroot
-DB_NAME = diplom
-DB_HOST = 172.21.0.2
+APP_PORT    = 3002
+DB_USER     = user
+DB_PASSWORD = user
+DB_NAME     = project
+DB_HOST     = 192.168.0.41
+DB_PORT     = 27017
