Add Middleware constaints

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,5 @@ DB_PASSWORD = user
 DB_NAME     = project
 DB_HOST     = 192.168.0.41
 DB_PORT     = 27017
+
+JWT_SECRET  = somesupersecretedstringandveryverylongstring
