--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,8 @@
 APP_PORT    = 3002
-DB_USER     = user
-DB_PASSWORD = user
-DB_NAME     = project
-DB_HOST     = 192.168.55.128
+DB_USER     = dev
+DB_PASSWORD = dev
+DB_NAME     = diplom
+DB_HOST     = 0.0.0.0
 DB_PORT     = 27017
 
 JWT_SECRET  = somesupersecretedstringandveryverylongstring
