--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fullcalendar/core": "^5.11.3",
@@ -26,14 +19,27 @@
     "@nivo/geo": "^0.80.0",
     "@nivo/line": "^0.79.1",
     "@nivo/pie": "^0.80.0",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.9.1",
+    "cors": "^2.8.5",
+    "d3": "^5.16.0",
     "formik": "^2.2.9",
+    "material-ui-popup-state": "^5.0.4",
+    "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-d3-graph": "^2.6.0",
+    "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "wagmi": "^0.12.0",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.2",
     "yup": "^0.32.11"
-    
   },
   "scripts": {
     "start": "react-scripts start",
